--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  install:
+    name: Install
     runs-on: ubuntu-latest
     container: node:latest
     steps:
@@ -28,3 +29,48 @@ jobs:
 
       - name: Install dependencies
         run: npm ci --cache .npm --prefer-offline
+
+  validate:
+    name: Validate
+    runs-on: ubuntu-latest
+    needs: install
+    steps:
+      - uses: actions/checkout@v4
+      - name: Validation step
+        run: echo "Running validation..."
+
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    needs: validate
+    steps:
+      - uses: actions/checkout@v4
+      - name: Run tests
+        run: echo "Running tests..."
+
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - uses: actions/checkout@v4
+      - name: Build project
+        run: echo "Building project..."
+
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v4
+      - name: Release step
+        run: echo "Releasing version..."
+
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    needs: release
+    steps:
+      - uses: actions/checkout@v4
+      - name: Deploy step
+        run: echo "Deploying..."
