--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,63 +14,34 @@ jobs:
     container: node:latest
     steps:
       - uses: actions/checkout@v4
-
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
-
       - uses: actions/cache@v4
         with:
           path: |
             node_modules
             .npm
           key: npm-${{ hashFiles('package-lock.json') }}
-
       - name: Install dependencies
         run: npm ci --cache .npm --prefer-offline
 
-  validate:
-    name: Validate
+  lint:
+    name: Lint
     runs-on: ubuntu-latest
     needs: install
     steps:
       - uses: actions/checkout@v4
-      - name: Validation step
-        run: echo "Running validation..."
-
-  test:
-    name: Test
-    runs-on: ubuntu-latest
-    needs: validate
-    steps:
-      - uses: actions/checkout@v4
-      - name: Run tests
-        run: echo "Running tests..."
-
-  build:
-    name: Build
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - uses: actions/checkout@v4
-      - name: Build project
-        run: echo "Building project..."
-
-  release:
-    name: Release
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - uses: actions/checkout@v4
-      - name: Release step
-        run: echo "Releasing version..."
-
-  deploy:
-    name: Deploy
-    runs-on: ubuntu-latest
-    needs: release
-    steps:
-      - uses: actions/checkout@v4
-      - name: Deploy step
-        run: echo "Deploying..."
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+      - uses: actions/cache@v4
+        with:
+          path: |
+            node_modules
+            .npm
+          key: npm-${{ hashFiles('package-lock.json') }}
+      - name: Run ESLint
+        run: npm run lint
