fix lint in yml and add husky

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "lint": "eslint src --max-warnings=0"
+    "lint": "eslint src --max-warnings=0",
+    "prepare": "husky"
   },
   "dependencies": {
     "express": "^4.18.2"
@@ -14,6 +15,7 @@
     "@eslint/js": "^9.38.0",
     "eslint": "^9.38.0",
     "globals": "^16.4.0",
+    "husky": "^9.1.7",
     "vite": "^5.0.8"
   }
 }
