--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,5 +43,7 @@ jobs:
             node_modules
             .npm
           key: npm-${{ hashFiles('package-lock.json') }}
+      - name: Install deps (restore from cache if possible)
+        run: npm ci --cache .npm --prefer-offline
       - name: Run ESLint
         run: npm run lint
