--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node src/index.js",
     "lint": "eslint src --max-warnings=0",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "vitest"
   },
   "dependencies": {
     "express": "^4.18.2"
@@ -16,6 +17,7 @@
     "eslint": "^9.38.0",
     "globals": "^16.4.0",
     "husky": "^9.1.7",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "vitest": "^4.0.2"
   }
 }
