--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,3 +47,26 @@ jobs:
         run: npm ci --cache .npm --prefer-offline
       - name: Run ESLint
         run: npm run lint
+
+  unit_test:
+    name: Unit tests
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+      - uses: actions/cache@v4
+        with:
+          path: |
+            node_modules
+            .npm
+          key: npm-${{ hashFiles('package-lock.json') }}
+      - name: Install deps (restore from cache if possible)
+        run: npm ci --cache .npm --prefer-offline
+      - name: Run unit tests (Vitest)
+        env:
+          CI: true
+        run: npm test
