--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node src/index.js",
     "lint": "eslint src --max-warnings=0",
     "prepare": "husky",
-    "test": "vitest"
+    "test": "vitest",
+    "release": "release-it"
   },
   "dependencies": {
     "express": "^4.18.2"
@@ -17,7 +18,14 @@
     "eslint": "^9.38.0",
     "globals": "^16.4.0",
     "husky": "^9.1.7",
+    "release-it": "^19.0.5",
     "vite": "^5.0.8",
     "vitest": "^4.0.2"
+  },
+  "release-it": {
+    "$schema": "https://unpkg.com/release-it/schema/release-it.json",
+    "github": {
+      "release": true
+    }
   }
 }
