--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "$schema": "https://unpkg.com/release-it/schema/release-it.json",
     "github": {
       "release": true
+    },
+    "git": {
+      "commitMessage": "chore: release v${version}"
     }
   }
 }
