--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,10 @@ on:
     branches: ["main"]
   workflow_dispatch:
 
+# nécessaire pour que release-it pousse tags/commits
+permissions:
+  contents: write
+
 jobs:
   install:
     name: Install
@@ -70,3 +74,34 @@ jobs:
         env:
           CI: true
         run: npm test
+
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    needs: unit_test
+    # Manuel (workflow_dispatch) OU auto sur push main, et pas sur "chore: release"
+    if: "${{ github.event_name == 'workflow_dispatch' || (github.event_name == 'push' && github.ref == 'refs/heads/main' && startsWith(github.event.head_commit.message, 'chore: release') == false) }}"
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+      - uses: actions/cache@v4
+        with:
+          path: |
+            node_modules
+            .npm
+          key: npm-${{ hashFiles('package-lock.json') }}
+      - name: Configure Git identity
+        run: |
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config user.name "github-actions[bot]"
+      - name: Install deps
+        run: npm ci --cache .npm --prefer-offline
+      - name: Release with release-it
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: npx --yes release-it --ci
