--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,11 +3,11 @@ name: CI
 on:
   push:
     branches: ["main"]
+    tags-ignore: ["*"]
   pull_request:
     branches: ["main"]
   workflow_dispatch:
 
-# nécessaire pour que release-it pousse tags/commits
 permissions:
   contents: write
 
@@ -35,6 +35,7 @@ jobs:
     name: Lint
     runs-on: ubuntu-latest
     needs: install
+    if: "${{ github.event_name != 'push' || !startsWith(github.event.head_commit.message, 'chore: release') }}"
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -56,6 +57,7 @@ jobs:
     name: Unit tests
     runs-on: ubuntu-latest
     needs: lint
+    if: "${{ github.event_name != 'push' || !startsWith(github.event.head_commit.message, 'chore: release') }}"
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -79,8 +81,7 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     needs: unit_test
-    # Manuel (workflow_dispatch) OU auto sur push main, et pas sur "chore: release"
-    if: "${{ github.event_name == 'workflow_dispatch' || (github.event_name == 'push' && github.ref == 'refs/heads/main' && startsWith(github.event.head_commit.message, 'chore: release') == false) }}"
+    if: "${{ github.event_name == 'workflow_dispatch' || (github.event_name == 'push' && github.ref == 'refs/heads/main' && !startsWith(github.event.head_commit.message, 'chore: release')) }}"
     steps:
       - uses: actions/checkout@v4
         with:
