--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,10 @@ on:
 permissions:
   contents: write
 
+# optional: expose repo var to steps (not used in job if)
+env:
+  ENV_TARGET: ${{ vars.ENV_TARGET || '' }}
+
 jobs:
   install:
     name: Install
@@ -52,6 +56,16 @@ jobs:
         run: npm ci --cache .npm --prefer-offline
       - name: Run ESLint
         run: npm run lint
+
+  only_canary:
+    name: Only Canary
+    runs-on: ubuntu-latest
+    needs: lint
+    # use vars.* at job-level conditions
+    if: "${{ vars.ENV_TARGET == 'canary' }}"
+    steps:
+      - name: Hello Only Canary
+        run: echo "Hello Only Canary !"
 
   unit_test:
     name: Unit tests
