--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,7 @@ on:
 
 permissions:
   contents: write
+  packages: write
 
 env:
   ENV_TARGET: ${{ vars.ENV_TARGET || '' }}
@@ -98,6 +99,38 @@ jobs:
       - name: Hello Integration
         run: echo "Hello Integration !"
 
+  build_docker:
+    name: Build & Push Docker (GHCR)
+    runs-on: ubuntu-latest
+    needs: integration_test
+    if: "${{ github.event_name != 'push' || !startsWith(github.event.head_commit.message, 'chore: release') }}"
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - uses: actions/checkout@v4
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ghcr.io/${{ github.repository }}
+          tags: |
+            type=ref,event=branch
+            type=sha
+            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
+      - uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+
   e2e_test:
     name: E2E Test (PRs only)
     runs-on: ubuntu-latest
@@ -110,7 +143,7 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-    needs: unit_test
+    needs: [build_docker]
     if: "${{ github.event_name == 'workflow_dispatch' || (github.event_name == 'push' && github.ref == 'refs/heads/main' && !startsWith(github.event.head_commit.message, 'chore: release')) }}"
     steps:
       - uses: actions/checkout@v4
