--- a/.dockerignore
+++ b/.dockerignore
@@ -1,26 +1,8 @@
+.git
 node_modules
 npm-debug.log
-yarn-error.log
-package-lock.json
-
-.git
-.gitignore
-.github/
-.vscode/
-.idea/
-
-coverage/
-*.test.js
-*.spec.js
-
-.env
-.env.*
-
-.DS_Store
-Thumbs.db
-
 Dockerfile
-.dockerignore
-
-dist/
-build/
+.gitignore
+dist
+coverage
+.env
